# tabletop-guided-adventures

./: .gitignore  README.md  apply_pyboof_patch.bat  launch_ttga.bat  pyboof_mmap_fix.patch  pyproject.toml  requirements.txt  test_zone_transform.py
docs/: llm_narrator_architecture.md
images/: _add_images_folders_here.txt
models/: _add_gguf_models_here.txt
piper_voices/: _add_piper_voices_here.txt
python/: launch_ttga.py
python/ttga/: __init__.py  add_camera_dialog.py  add_projector_dialog.py  add_zone_dialog.py  camera.py  camera_calibration.py  camera_feed.py  camera_manager.py  constants.py  game_base.py  game_dialog.py  game_event_manager.py  game_loader.py  help_agent.py  llm_client.py  main_core.py  main_window.py  narration_engine.py  narration_service.py  narrator.py  projector.py  projector_dialog.py  projector_manager.py  projector_viewport.py  qr_detection.py  sound_mixer.py  speech_recognition.py  viewport_widget.py  voice_recognition.py  zone.py  zone_manager.py
scripts/: generate_micro_qr_code.py
test_games/: __init__.py
test_games/calibration_precision_game/: __init__.py  event_manager.py  game.py  game.yaml
tests/: test_camera_calibration_integration.py  test_camera_feed_integration.py  test_help_agent.py  test_llm_client.py  test_llm_integration.py  test_narration_engine.py  test_narration_service.py  test_piper_tts_integration.py  test_qr_detection_integration.py  test_setup_flow.py  test_sound_mixer_integration.py  test_speech_recognition_integration.py  test_voice_recognition_integration.py
vosk_models/: _add_vosk_models_here.txt
(+6 files in other folders)
